--- a/.npmrc
+++ b/.npmrc
@@ -1,4 +1,4 @@
-email=devopstrainingblr@gmail.com
+email=lalualex.17@gmail.com
 #always-auth=true
 _auth=YWRtaW46c2FyYWhha2l2YTg=
 allowRepublish=true
